refactor(core): Apply parameterized types to generics in core logic
Refactored several instances of raw and wildcard generic types to use more precise parameterized types. This improves type safety, readability, and allows the compiler to catch more potential issues at compile time.

No functional behavior has changed.